# task-manager

./: .env_example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  setup.cfg
.github/workflows/: my_tests.yml
locale/ru/LC_MESSAGES/: django.po
task_manager/: logger_middleware.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py
task_manager/management/: __init__.py
task_manager/management/commands/: hello.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_executor_alter_task_label.py  0002_initial.py  0003_alter_task_executor.py  0003_alter_task_label.py  0004_alter_task_created_at.py  0004_alter_task_label.py  0005_alter_task_author_alter_task_executor.py  0005_remove_task_label_task_label.py  0006_alter_task_author.py  0006_alter_task_author_alter_task_executor.py  0007_alter_task_author_alter_task_executor.py  0007_alter_task_executor.py  0008_alter_task_author_alter_task_executor.py  0008_rename_label_task_labels.py  0009_alter_task_name.py
task_manager/templatetags/: getattr.py
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_delete_userprofile.py  (+5 more)
templates/: base.html  create.html  delete.html  index.html  list.html  update.html
templates/labels/: create.html  delete.html  list.html  update.html
templates/statuses/: create.html  delete.html  list.html  update.html
templates/tasks/: create.html  delete.html  list.html  show.html  update.html
templates/users/: create.html  delete.html  index.html  login.html  show.html  update.html
tests/: assert_.py  conftest.py  preparation.py  test.html  test_label.py  test_status.py  test_task.py  test_user.py  tests_statuses.py  tests_user.py
tests/testapp/: apps.py
