[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Nella <nella611@yandex.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
python-dotenv = "^1.0.0"
dj-database-url = "^2.0.0"
gunicorn = "^20.1.0"
django-bootstrap4 = "^22.3"
psycopg2-binary = "^2.9.5"
django-filter = "^23.2"
rollbar = "^0.16.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
logger = "^1.4"
pytest-django = "^4.5.2"
pytest-cov = "^4.1.0"
coverage = "^7.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"
# -- recommended but optional:
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
